Bug 96614 - Load Document Information from Address book not working
Summary: Load Document Information from Address book not working
Status: RESOLVED FIXED
Alias: None
Product: kword
Classification: Miscellaneous
Component: general (show other bugs)
Version: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Zander
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-01-09 03:02 UTC by Mike McBride
Modified: 2005-02-01 12:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike McBride 2005-01-09 03:02:38 UTC
Version:           1.3post (CVS >= 20041129) (using KDE 3.3.2, Gentoo)
Compiler:          gcc version 3.3.4 20040623 (Gentoo Linux 3.3.4-r1, ssp-3.3.2-2, pie-8.7.6)
OS:                Linux (i686) release 2.6.9-gentoo-r1

As far as I can tell, the "Load from Address Book" option in the Document Information (Author Tab) dialog does not function.  I have tried:

1) No fields filed out and clicking the button.
2) Only last name entered in "Name" field and clicking the button.
3) First Name then last name (Michael McBride) in the "Name" field and clicking the button
4) Last Name, First Name (McBride, Michael) in the "Name" field and clicking the button
5) Last Name, First Initial (McBride, M) in the "Name" field and clicking the button.
6) Email only in the "Email" and clicking the button.  

Nothing happens....
Comment 1 Sven Lueppken 2005-02-01 12:35:22 UTC
CVS commit by lueppken: 

"Fix" for bug #96614...the feature actually works as intended. I'm adding a 
little dialog which should make more clear what the button actually does,
as discussed with dfaure.

BUG:96614


  M +6 -1      koDocumentInfoDlg.cc   1.42


--- koffice/lib/kofficecore/koDocumentInfoDlg.cc  #1.41:1.42
@@ -41,4 +41,5 @@
 #include <kdeversion.h>
 #include <klocale.h>
+#include <kmessagebox.h>
 #include <ktar.h>
 #include <kdebug.h>
@@ -158,5 +159,9 @@ void KoDocumentInfoDlg::loadFromKABC()
   KABC::Addressee addr = ab->whoAmI();
   if ( addr.isEmpty() )
+  {
+    KMessageBox::sorry( 0L, i18n( "No personal contact data set, please use the option \
+                                  \"Set as Personal Contact Data\" from the \"Edit\" menu in KAddressbook to set one." ) );
     return;
+  }
 
   d->m_leFullName->setText( addr.formattedName() );