"Fix" for bug #96614...the feature actually works as intended. I'm adding a little dialog which should make more clear what the button actually does, as discussed with dfaure.

BUG:96614

svn path=/trunk/koffice/; revision=384911